<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_base_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_order_courier"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_rc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_no_order_courier"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_consignee"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_names"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_consignee_name"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_phone"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/et_num"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_phone"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_express_company"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_exc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_courier_company"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_pickUP_code"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_thn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_pickUP_code"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_address"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_des"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_address"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_pay"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_pay"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_check_time"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_check_not_input_time"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_confirm_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_check_button_confirm_receipt"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_check_button_cancel_order"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_confirm_take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_check_button_take_order"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_confirm_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_check_button_confirm_delivery"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_delete_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_check_button_delete_order"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>